Configures and starts php-fpm in supervisor

--- a/docker/supervisord/supervisor.conf
+++ b/docker/supervisord/supervisor.conf
@@ -15,6 +15,13 @@ nocleanup = true
 childlogdir = /tmp
 strip_ansi = false
 
+[program:php-fpm]
+# Config is in the path of the env var $PHP_INI_DIR
+command=/usr/local/sbin/php-fpm -c /usr/local/etc/php
+autostart=true
+autorestart=true
+priority=5
+
 [program:laravel-worker]
 process_name=%(program_name)s_%(process_num)02d
 command=php /var/www/app/artisan queue:work sync --sleep=3 --tries=3 --max-time=3600
