--- a/docker/supervisord/supervisor.conf
+++ b/docker/supervisord/supervisor.conf
@@ -29,7 +29,7 @@ stderr_logfile_maxbytes=0
 
 [program:laravel-worker]
 process_name=%(program_name)s_%(process_num)02d
-command=php /var/www/app/artisan queue:work sync --sleep=3 --tries=3 --max-time=3600
+command=php /var/www/app/artisan queue:work --sleep=3 --tries=3 --max-time=3600
 user=www-data
 autostart=true
 autorestart=true
